add favicon and slight modifications to home page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Michael Ho
     <em>here's my <a href="/assets/resume.pdf">r&eacute;sum&eacute;</a></em>
   </div>
   <div id="find">
-    you also can find me on...
+    you can find me on...
   </div>
   <div id="find2">
     <ul>
